[package]
name = "y"
version = "0.1.0"
authors = ["L3vi7e <l3vi7e@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/inverse-lambda/y/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log          = { version = "0.4" }
thiserror    = { version = "1.0", default-features = false }
#anyhow       = { version = "1.0", default-features = false }
concat-string = "1.0.1" # performant string concatenation